# sbapa

./: .gitignore  README.md  check.py  debug.py  main.py  pyproject.toml
src/: debug.py  main.py  parse_movimentacoes.py  trim.py
