[project]
name = "sbapa"
version = "0.1.0"
description = "Santander Brazil Personal Account Proof & Assertion"
readme = "README.md"
authors = [
    { name = "Gabriel Avila", email = "gabriel.avila.01+sbapa@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
]
license = "Unlicense"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]